--- a/css/scss/bits/_variables.scss
+++ b/css/scss/bits/_variables.scss
@@ -1,6 +1,6 @@
 /* Main Colours
    ========================================================================= */
-$primary-color: #1271db;
+$primary-color: rgb(252, 1, 76);
 $secondary-color: #000;
 $dark-grey: #aaa;
 $light-grey: #f5f5f5;
@@ -17,4 +17,4 @@ $subtle-color: #999;
    ========================================================================= */
 $br: 5px; // Border-radius
 $btn-br: 5px; // Button border-radius
-$padding: 1rem; // Consistent padding and margins
+$padding: 3rem; // Consistent padding and margins
