--- a/css/scss/partials/_toolbox.scss
+++ b/css/scss/partials/_toolbox.scss
@@ -2,8 +2,25 @@ p:empty {
     display: none;
 }
 
+img {
+    display: block;
+}
+
 .screen-reader {
     position: absolute;
     top: -9999px;
     left: -9999px;
+}
+
+%clearfix {
+    &:before, &:after {
+        content: "\0020"; 
+        display: block; 
+        height: 0; 
+        overflow: hidden; 
+    }
+
+    &:after {
+        clear: both;
+    }
 }
