--- a/css/scss/partials/_typography.scss
+++ b/css/scss/partials/_typography.scss
@@ -1,11 +1,20 @@
 body {
     @include font-stack;
     line-height: 1.5;
-    color: #333;
+    color: #999;
 }
 
 a {
     color: $primary-color;
+    transition: all .2s linear;
+
+    p & {
+        border-bottom: 1px solid #ddd;
+
+        &:hover {
+            border-bottom: 1px solid #fff;
+        }
+    }
 
     &:hover,
     &:focus {
